--- a/godlike.styl
+++ b/godlike.styl
@@ -119,10 +119,14 @@ ul, ol, menu
     -webkit-padding 0
     list-style none
 
-// Valid stylization in text
 article
-    img
+
+    // FFix align and sizes graphical elements
+    img, embed, object, video, iframe
+        display block
+        margin auto
         max-width 100%
+        height auto
 
     // Add margins
     ul, ol, menu
